--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
           </section>
           <section>
             <p>Who already knows Git?</p>
+          </section>
+          <section>
             <p>Who knows any of these?</p>
             <ul>
               <li>SVN</li>
@@ -152,19 +154,19 @@
           <section>
             <h3>Local</h3>
             <div>
-              <img width="500" data-src="http://git-scm.com/figures/18333fig0102-tn.png" alt="Local VCS">
+              <img width="500" data-src="http://git-scm.com/book/en/v2/book/01-introduction/images/local.png" alt="Local VCS">
             </div>
           </section>
           <section>
             <h3>Centralized</h3>
             <div>
-              <img width="500" data-src="http://git-scm.com/figures/18333fig0102-tn.png" alt="Centralized VCS">
+              <img width="500" data-src="http://git-scm.com/book/en/v2/book/01-introduction/images/centralized.png" alt="Centralized VCS">
             </div>
           </section>
           <section>
             <h3>Distributed</h3>
             <div>
-              <img width="500" data-src="http://git-scm.com/figures/18333fig0103-tn.png" alt="Distributed VCS">
+              <img width="500" data-src="http://git-scm.com/book/en/v2/book/01-introduction/images/distributed.png" alt="Distributed VCS">
             </div>
           </section>
         </section>
