Minor presentation changes.

--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
         <section>
           <section>
             <h2>Why should I use version control?</h2>
+          </section>
+          <section>
             <blockquote cite="https://www.youtube.com/watch?v=0aRtupiY9Dw">
               &ldquo;An elegant weapon for a more civilized age.&rdquo;
             </blockquote>
@@ -114,6 +116,7 @@
             <ul>
               <li>Do not have other people working on the code.</li>
               <li>Do not plan on letting others have the code.</li>
+              <li class="fragment">Isn't it an overhead?</li>
             </ul>
           </section>
           <section>
@@ -238,12 +241,11 @@
         <section>
           <section>
             <h2>About Github</h2>
-            <div>
-              <img width="250" data-src="http://i1-news.softpedia-static.com/images/news2/Twitter-s-Original-Logo-Designer-Only-Made-3-from-It-2.jpg" alt="Octocat">
-            </div>
           </section>
           <section>
-            <h3>What it is</h3>
+            <div>
+              <img width="200" data-src="http://i1-news.softpedia-static.com/images/news2/Twitter-s-Original-Logo-Designer-Only-Made-3-from-It-2.jpg" alt="Octocat">
+            </div>
             <ul>
               <li>web-based Git repository hosting service</li>
               <li>offers all of the distributed SCM functionalities of Git</li>
