--- a/index.html
+++ b/index.html
@@ -198,6 +198,9 @@
             <p class="fragment">
               You can define your own plugin Actions to make other plugins interact with your code.
             </p>
+            <p class="fragment">
+              <a href="https://codex.wordpress.org/Plugin_API/Filter_Reference" target="_blank">Reference</a>
+            </p>
           </section>
           <section>
             <h3>Hooks - Filters</h3>
@@ -206,6 +209,21 @@
             </p>
             <p class="fragment">
               You can define your own plugin Filters to make other plugins interact with your code.
+            </p>
+            <p class="fragment">
+              <a href="https://codex.wordpress.org/Plugin_API/Action_Reference" target="_blank">Reference</a>
+            </p>
+          </section>
+          <section>
+            <h3>WP Query</h3>
+            <p class="">
+              WP_Query is a class that deals with the intricacies of a post's (or page's) request to a WordPress blog
+            </p>
+            <p class="fragment">
+              You can interact and modify it.
+            </p>
+            <p class="fragment">
+              <a href="https://codex.wordpress.org/Class_Reference/WP_Query" target="_blank">Reference</a>
             </p>
           </section>
         </section>
@@ -268,11 +286,17 @@
             <p>
               The 'link_category' taxonomy lets you categorize your links. These tend to be used only internally, for organizational reasons, and are not usually exposed on the site itself. They are handy for defining groups of links to be displayed in sidebars and the like.
             </p>
+            <p class="fragment">
+              This is quite deprecated
+            </p>
           </section>
           <section>
             <h3>Post format</h3>
             <p>
               The 'post_format' taxonomy was introduced in WordPress 3.1 and it is a piece of meta information that can be used by a theme to customize its presentation of a post. New post formats can't be created or added to the default existing ones.
+            </p>
+            <p class="fragment">
+              Not really used, at least by me. <a href="https://codex.wordpress.org/Post_Formats" target="_blank">Reference</a>
             </p>
           </section>
           <section>
@@ -499,8 +523,11 @@
           <section>
             <h3>index.php</h3>
             <p>
-              This template file is used to display the blog post index.
-              The blog post index contains a loop (bunch of PHP code) which displays the most recent blog posts according to some predefined conditions.It displays a list of posts in excerpt or full-length form.
+              This template file is used to display the blog post index.<br/>
+              The blog post index contains a loop (bunch of PHP code) which displays the most recent blog posts according to some predefined conditions.
+            </p>
+            <p class="fragment">
+              It displays a list of posts in excerpt or full-length form.<br/>
               The blog post index can be set to display on the front page of your website or on a separate static page.
             </p>
           </section>
@@ -577,6 +604,9 @@
           <section>
             <p>Conditional Tags can be used in your Template Files to alter the display of content depending on the conditions that the current page matches.</p>
             <p class="fragment">A humble note: use these in your template files as a last chance, because there is plenty of other ways to avoid their usage. </p>
+            <p class="fragment">
+              <a href="https://codex.wordpress.org/Conditional_Tags" target="_blank">reference</a>
+            </p>
           </section>
         </section>
 
@@ -624,7 +654,7 @@
           <h1>THE END</h1>
           <p>
             - <a href="http://goo.gl/YkiYxX">Link to this presentation</a> <br>
-            - <a href="https://github.com/andou/wordpress-for-dummies">Source code of this presentation</a>
+            - <a href="https://github.com/andou/wordpress-for-dummies">Source code of this presentation</a><br>
             - More on this series: <a href="http://goo.gl/sE1Jer">Github for dummies</a>
           </p>
         </section>
